Bug 89963 - lp_bld_debug.cpp:100:31: error: no matching function for call to ‘llvm::raw_ostream::raw_ostream()’
Summary: lp_bld_debug.cpp:100:31: error: no matching function for call to ‘llvm::raw_o...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected
Depends on:
Blocks:
 
Reported: 2015-04-09 05:22 UTC by Vinson Lee
Modified: 2015-04-09 17:42 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2015-04-09 05:22:40 UTC
mesa: a873b79fa5e3138196a3c1785f2a65308fa78286 (master 10.6.0-devel)

Build error with llvm-3.7.0svn.

  Compiling src/gallium/auxiliary/gallivm/lp_bld_debug.cpp ...
src/gallium/auxiliary/gallivm/lp_bld_debug.cpp: In constructor ‘raw_debug_ostream::raw_debug_ostream()’:
src/gallium/auxiliary/gallivm/lp_bld_debug.cpp:100:31: error: no matching function for call to ‘llvm::raw_ostream::raw_ostream()’
    raw_debug_ostream() : pos(0) { }
                               ^
src/gallium/auxiliary/gallivm/lp_bld_debug.cpp:100:31: note: candidate is:
In file included from src/gallium/auxiliary/gallivm/lp_bld_debug.cpp:33:0:
include/llvm/Support/raw_ostream.h:95:12: note: llvm::raw_ostream::raw_ostream(llvm::raw_ostream::StreamKind, bool)
   explicit raw_ostream(StreamKind Kind, bool unbuffered = false)
            ^
include/llvm/Support/raw_ostream.h:95:12: note:   candidate expects 2 arguments, 0 provided
Comment 1 Vinson Lee 2015-04-09 05:56:20 UTC
Build error introduced with llvm-3.7.0svn r234460.

commit 271631a0afecebfb806e8d4d67407c919c4e1c0d
Author: Rafael Espindola <rafael.espindola@gmail.com>
Date:   Thu Apr 9 02:10:28 2015 +0000

    Add classof implementations to the raw_ostream classes.
    
    More uses to follow in a another patch.
    
    git-svn-id: https://llvm.org/svn/llvm-project/llvm/trunk@234460 91177308-0d34-0410-b5e6-96231b3b80d8
Comment 2 Vinson Lee 2015-04-09 17:42:40 UTC
commit 50e9fa2ed69cb5f76f66231976ea789c0091a64d
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Wed Apr 8 22:51:57 2015 -0700

    gallivm: Fix build since llvm-3.7.0svn r234460.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89963
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Tom Stellard <thomas.stellard@amd.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.